Provinces/style.css
html {
	background-color:#222222;
	height: 95%;
	width: 95%;
	
	margin: auto;
	padding: 0px;
}

body {
	height: 100%;
	width: 100%;
	margin: 0px;
}

img {
    pointer-events: none;
    user-select: none;
   -webkit-user-select: none; 
   -khtml-user-select: none; 
   -moz-user-select: none; 
   -ms-user-select: none; 
}

#screenOrganizer {
  display: flex;
  flex-direction: row;
  height: 95%
}

.gameMap {
	flex: auto;
	background-color:#000000;
	border: 3px solid #FFFFFF;
	margin: 10px;
	
	width: 65%;
	height: 100%;
}

.actions {
	flex: auto;
	background-color:#002200;
	border: 3px solid #BBFFBB;
	margin: 10px;
	
	height: 100%;
}

.tile {
	
}

.action {
	display: block;
	background-color:#448844;
	border: 3px solid #BBFFBB;
	margin: 10px;
	padding: 5px;
	font-family: "Courier New";
	font-size: 20px;
	color: #FFFFFF;
}
.action:hover {
	cursor: pointer;
}

#gameCanvas {
	width: 100%;
	height: 100%;
}

